# routes/api.php
@@ -80,9 +80,11 @@ Route::group(['middleware' => 'api', 'prefix' => 'v0.01'], function ($router) {
 
         Route::post('/send-bulk-email', [App\Http\Controllers\Api\SendEmailController::class, 'sendBulk']);
             Route::post('/send-single-email', [App\Http\Controllers\Api\SendEmailController::class, 'sendSingle']);
+             Route::post('/email-contacts', [App\Http\Controllers\Api\SendEmailController::class, 'all']);
 
-        Route::post('/send-bulk-message', [App\Http\Controllers\Api\SendEmailController::class, 'sendBulk']);
-            Route::post('/send-single-message', [App\Http\Controllers\Api\SendEmailController::class, 'sendSingle']);
+        Route::post('/send-bulk-message', [App\Http\Controllers\Api\SendMessageController::class, 'sendBulk']);
+            Route::post('/send-single-message', [App\Http\Controllers\Api\SendMessageController::class, 'sendSingle']);
+            Route::post('/message-contacts', [App\Http\Controllers\Api\SendMessageController::class, 'sendSingle']);
 
         Route::post('/logout', [App\Http\Controllers\Api\AuthController::class, 'logout']);
         Route::post('/refresh', [App\Http\Controllers\Api\AuthController::class, 'refresh']);
